Some minor cosmetic settings improvements

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -19,7 +19,7 @@
     "LOG_OUT": "Log out",
     "LOST_PASSWORD": " Lost password?",
     "MALFORMED_NUMBER": "Your number seems to not be valid!",
-    "MISCALLENEOUS": "Miscellaneous settings",
+    "MISCALLENEOUS": "Miscellaneous",
     "MOBILE_NUMBER_EXAMPLE": "eg. +358 40 123456",
     "MOBILE_NUMBER": "Mobile number",
     "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
