Translations to syncing contacts modal

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,7 +1,5 @@
 {
     "ACTIONS": "Actions",
-    "NO_CONTACTS_SEARCH": "No matching contacts",
-    "NO_CONTACTS_FOUND": "Looks like your phone doesn't have any contacts that have SoAR installed",
     "CALL_HEADER": "Call with {{displayName}}",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
     "CALL_INCOMING_TITLE":" Call from {{displayName}}",
@@ -20,9 +18,11 @@
     "LOST_PASSWORD": " Lost password?",
     "MALFORMED_NUMBER": "Your number seems to not be valid!",
     "MISCALLENEOUS": "Miscellaneous",
-    "MOBILE_NUMBER_EXAMPLE": "eg. +358 40 123456",
     "MOBILE_NUMBER": "Mobile number",
+    "MOBILE_NUMBER_EXAMPLE": "eg. +358 40 123456",
     "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
+    "NO_CONTACTS_FOUND": "Looks like your phone doesn't have any contacts that have SoAR installed",
+    "NO_CONTACTS_SEARCH": "No matching contacts",
     "NO_VERIFICATION": "Verification code not found",
     "PASSWORD": "Password",
     "PASSWORD_AGAIN": "Password again",
@@ -40,6 +40,7 @@
     "SAR_CALL": "Call with SoAR",
     "SEARCH": "Search",
     "SETTINGS": "Settings",
+    "SYNCING_CONTACTS": "Syncing your contacts...",
     "TIMEOUT_ERROR" :  "Connection timed out",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
     "USER_ALREADY_IN_CALL": "User is already in call!",
