--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,7 +1,5 @@
 {
     "ACTIONS": "Toiminnot",
-    "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
-    "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
@@ -23,6 +21,8 @@
     "MOBILE_NUMBER": "Puhelinnumero",
     "MOBILE_NUMBER_EXAMPLE": "Esim. +358 40 123456",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
+    "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
+    "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
     "NO_VERIFICATION": "Kyseistä koodia ei löytynyt",
     "PASSWORD": "Salasana",
     "PASSWORD_AGAIN": "Salasana uudelleen",
@@ -40,6 +40,7 @@
     "SAR_CALL": "Soita SoAR:lla",
     "SEARCH": "Hae",
     "SETTINGS": "Asetukset",
+    "SYNCING_CONTACTS": "Päivitetään kontakteja...",
     "TIMEOUT_ERROR" :  "Yhteyttä palvelimeen ei saatu",
     "UNSPECIFIED_ERROR" :  "Tuntematon virhe",
     "USER_ALREADY_IN_CALL": "Käyttäjällä on puhelu kesken!",
