Add 'add new contact' button to contacts listing

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,5 +1,6 @@
 {
     "ACTIONS": "Actions",
+    "ADD_CONTACT": "Add new contact",
     "CALL_HEADER": "Call with {{displayName}}",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
     "CALL_INCOMING_TITLE":" Call from {{displayName}}",
