Add some translations to the contact adding modal

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -9,6 +9,7 @@
     "CONTACTS": "Contacts",
     "CONTACT_CURRENT_STATE": "Currently ",
     "DIAL_WAIT": "Dialing, please hold...",
+    "DISPLAY_NAME": "Display name",
     "ERROR" :  "Error!",
     "ERROR_NETWORK" : "Network error with server!",
     "ERROR_SERVER" : "Could not connect to server!",
