Add reconnect timer translations

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,6 +1,5 @@
 {
     "ACTIONS": "Actions",
-    "OR": "or",
     "ADD": "Add",
     "ADD_CONTACT": "Add new contact",
     "CALL_HEADER": "Call with {{displayName}}",
@@ -24,10 +23,12 @@
     "MISCALLENEOUS": "Miscellaneous",
     "MOBILE_NUMBER": "Mobile number",
     "MOBILE_NUMBER_EXAMPLE": "eg. +358 40 123456",
+    "NEXT_RECONNECT_IN": "Next attempt in {{nextReconnectIn}} seconds...",
     "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Looks like your phone doesn't have any contacts that have SoAR installed",
     "NO_CONTACTS_SEARCH": "No matching contacts",
     "NO_VERIFICATION": "Verification code not found",
+    "OR": "or",
     "PASSWORD": "Password",
     "PASSWORD_AGAIN": "Password again",
     "PASSWORD_ERROR": "Password error",
