--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -23,6 +23,7 @@
     "MISCALLENEOUS": "Muut",
     "MOBILE_NUMBER": "Puhelinnumero",
     "MOBILE_NUMBER_EXAMPLE": "Esim. +358 40 123456",
+    "NEXT_RECONNECT_IN": "Seuraava yritys {{nextReconnectIn}} sekunnissa...",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
@@ -35,7 +36,7 @@
     "PROFILE": "Profiili",
     "QUIT": "Lopeta sovellus",
     "RECONNECT_FAILED": "Yhteyden uudelleenmuodostaminen ei onnistunut. Ole hyvä ja yritä myöhemmin uudestaan.",
-    "RECONNECT_STARTED": "Yhteys menetetty. Yritetään yhdistää uudelleen...",
+    "RECONNECT_STARTED": "Yhteys menetetty. Yritetään yhdistää...",
     "REFRESH_CONTACTS": "Päivitä kontaktilistasi",
     "REGISTER" :  "Rekisteröidy",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
