--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -23,7 +23,7 @@
     "MISCALLENEOUS": "Muut",
     "MOBILE_NUMBER": "Puhelinnumero",
     "MOBILE_NUMBER_EXAMPLE": "Esim. +358 40 123456",
-    "NEXT_RECONNECT_IN": "Seuraava yritys {{nextReconnectIn}} sekunnissa...",
+    "NEXT_RECONNECT_IN": "Seuraava yritys {{countdown}} sekunnissa...",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
