--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -24,6 +24,7 @@
     "MOBILE_NUMBER": "Puhelinnumero",
     "MOBILE_NUMBER_EXAMPLE": "Esim. +358 40 123456",
     "NEXT_RECONNECT_IN": "Seuraava yritys {{countdown}} sekunnissa...",
+    "ERROR_FETCH_CONTACTS": "Kontaktien haku ei onnistunut.",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
