Add force reconnect button

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -12,17 +12,18 @@
     "DIAL_WAIT": "Dialing, please hold...",
     "DISPLAY_NAME": "Display name",
     "ERROR" :  "Error!",
+    "ERROR_FETCH_CONTACTS": "Failed to fetch contacts",
     "ERROR_NETWORK" : "Network error with server!",
     "ERROR_SERVER" : "Could not connect to server!",
     "ERROR_TITLE" : "Something went wrong!",
     "ERROR_USER_OFFLINE": "Looks like that user is offline!",
+    "FORCE_RECONNECT": "Try again now",
     "LOGIN": "Log in",
     "LOG_OUT": "Log out",
     "LOST_PASSWORD": " Lost password?",
     "MALFORMED_NUMBER": "Your number seems to not be valid!",
     "MISCALLENEOUS": "Miscellaneous",
     "MOBILE_NUMBER": "Mobile number",
-    "ERROR_FETCH_CONTACTS": "Failed to fetch contacts",
     "MOBILE_NUMBER_EXAMPLE": "eg. +358 40 123456",
     "NEXT_RECONNECT_IN": "Next attempt in {{countdown}} seconds...",
     "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
