--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -12,10 +12,12 @@
     "DIAL_WAIT": "Soitetaan, odota hetki...",
     "DISPLAY_NAME": "Nimi",
     "ERROR" :  "Virhe!",
+    "ERROR_FETCH_CONTACTS": "Kontaktien haku ei onnistunut.",
     "ERROR_NETWORK" : "Yhteysvirhe palvelimen kanssa",
     "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
     "ERROR_TITLE" : "Jotain meni pieleen!",
     "ERROR_USER_OFFLINE": "Näyttää siltä että käyttäjä on offline!",
+    "FORCE_RECONNECT": "Kokeile uudelleen heti",
     "LOGIN" :  "Kirjaudu sisään",
     "LOG_OUT": "Kirjaudu ulos",
     "LOST_PASSWORD": "Unohditko salasanasi?",
@@ -24,7 +26,6 @@
     "MOBILE_NUMBER": "Puhelinnumero",
     "MOBILE_NUMBER_EXAMPLE": "Esim. +358 40 123456",
     "NEXT_RECONNECT_IN": "Seuraava yritys {{countdown}} sekunnissa...",
-    "ERROR_FETCH_CONTACTS": "Kontaktien haku ei onnistunut.",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
