Add error messages for some missing form fields

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -26,13 +26,16 @@
     "MISCALLENEOUS": "Miscellaneous",
     "MOBILE_NUMBER": "Mobile number",
     "MOBILE_NUMBER_EXAMPLE": "eg. +358 40 123456",
+    "NAME_MISSING": "Looks like you're missing a contact name!",
     "NEXT_RECONNECT_IN": "Next attempt in {{countdown}} seconds...",
     "NOTIFICATION_CALL" : "SoAR call from {{displayName}} ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Looks like your phone doesn't have any contacts that have SoAR installed",
     "NO_CONTACTS_SEARCH": "No matching contacts",
     "NO_VERIFICATION": "Verification code not found",
+    "NUMBER_WRONG_FORMAT": "The number does not seem right!",
     "OR": "or",
     "PASSWORD": "Password",
+    "PASSWORD_MISSING": "Your password is missing!",
     "PASSWORD_AGAIN": "Password again",
     "PASSWORD_ERROR": "Password error",
     "PASSWORD_NO_MATCH": "Passwords do not match!",
