--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -26,13 +26,16 @@
     "MISCALLENEOUS": "Muut",
     "MOBILE_NUMBER": "Puhelinnumero",
     "MOBILE_NUMBER_EXAMPLE": "Esim. +358 40 123456",
+    "NAME_MISSING": "Kontakin nimi näyttää puuttuvan!",
     "NEXT_RECONNECT_IN": "Seuraava yritys {{countdown}} sekunnissa...",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
     "NO_VERIFICATION": "Kyseistä koodia ei löytynyt",
+    "NUMBER_WRONG_FORMAT": "Numero ei näytä oikealta!",
     "OR": "tai",
     "PASSWORD": "Salasana",
+    "PASSWORD_MISSING": "Salasana puuttuu!",
     "PASSWORD_AGAIN": "Salasana uudelleen",
     "PASSWORD_ERROR": "Salsanavirhe",
     "PASSWORD_NO_MATCH": "Salasanat eivät täsmää!",
