Add initial cancel call button

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,8 +1,5 @@
 {
     "ABOUT": "About SoAR",
-    "CODE_MISSING": "Your verification code is missing!",
-    "PASSWORD_MISSING": "Your password is missing",
-    "PASSWORD_AGAIN_MISSING": "Please put in your password twice.",
     "ACTIONS": "Actions",
     "ADD": "Add",
     "ADD_CONTACT": "Add new contact",
@@ -11,6 +8,7 @@
     "CALL_INCOMING_TITLE":" Call from {{displayName}}",
     "CAMERA_NOT_FOUND" :  "No input device found!",
     "CANCEL": "Cancel",
+    "CODE_MISSING": "Your verification code is missing!",
     "CONTACTS": "Contacts",
     "CONTACT_CURRENT_STATE": "Currently ",
     "DIAL_WAIT": "Dialing, please hold...",
@@ -38,12 +36,15 @@
     "NUMBER_WRONG_FORMAT": "The number does not seem right!",
     "OR": "or",
     "PASSWORD": "Password",
-    "PASSWORD_MISSING": "Your password is missing!",
     "PASSWORD_AGAIN": "Password again",
+    "PASSWORD_AGAIN_MISSING": "Please put in your password twice.",
     "PASSWORD_ERROR": "Password error",
+    "PASSWORD_MISSING": "Your password is missing!",
+    "PASSWORD_MISSING": "Your password is missing",
     "PASSWORD_NO_MATCH": "Passwords do not match!",
     "PROFILE": "Profile",
     "QUIT": "Exit the app",
+    "QUIT_CALLLING": "Quit calling",
     "RECONNECT_FAILED": "Reconnecting failed. Please wait and try again later",
     "RECONNECT_STARTED": "Lost connection. Attemping to reconnect...",
     "REFRESH_CONTACTS": "Refresh your contacts list",
