--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,8 +1,5 @@
 {
     "ABOUT": "Tietoja SoAR:sta",
-    "CODE_MISSING": "Varmistuslukusi puuttuu",
-    "PASSWORD_MISSING": "Salasanasi puuttuu",
-    "PASSWORD_AGAIN_MISSING": "Ole hyvä ja laita salasanasi kahdesti",
     "ACTIONS": "Toiminnot",
     "ADD": "Lisää",
     "ADD_CONTACT": "Lisää uusi kontakti",
@@ -11,6 +8,7 @@
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
     "CAMERA_NOT_FOUND" :  "Kameraa ei löytynyt!",
     "CANCEL": "Peruuta",
+    "CODE_MISSING": "Varmistuslukusi puuttuu",
     "CONTACTS": "Kontaktit",
     "CONTACT_CURRENT_STATE": "Juuri nyt ",
     "DIAL_WAIT": "Soitetaan, odota hetki...",
@@ -38,12 +36,15 @@
     "NUMBER_WRONG_FORMAT": "Numero ei näytä oikealta!",
     "OR": "tai",
     "PASSWORD": "Salasana",
-    "PASSWORD_MISSING": "Salasana puuttuu!",
     "PASSWORD_AGAIN": "Salasana uudelleen",
+    "PASSWORD_AGAIN_MISSING": "Ole hyvä ja laita salasanasi kahdesti",
     "PASSWORD_ERROR": "Salsanavirhe",
+    "PASSWORD_MISSING": "Salasana puuttuu!",
+    "PASSWORD_MISSING": "Salasanasi puuttuu",
     "PASSWORD_NO_MATCH": "Salasanat eivät täsmää!",
     "PROFILE": "Profiili",
     "QUIT": "Lopeta sovellus",
+    "QUIT_CALLLING": "Lopeta puhelu",
     "RECONNECT_FAILED": "Yhteyden uudelleenmuodostaminen ei onnistunut. Ole hyvä ja yritä myöhemmin uudestaan.",
     "RECONNECT_STARTED": "Yhteys menetetty. Yritetään yhdistää...",
     "REFRESH_CONTACTS": "Päivitä kontaktilistasi",
