Add seperate settings module for handling user preferences and such in a handy way

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,5 +1,7 @@
 {
     "ABOUT": "About SoAR",
+    "SOAR_PREFERENCES": "SoAR preferences",
+    "PREFERENCES_SAVE_CALLS": "Save video calls for debugging?",
     "ACTIONS": "Actions",
     "ADD": "Add",
     "ADD_CONTACT": "Add new contact",
