Add loader for saving videos

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,7 +1,5 @@
 {
     "ABOUT": "About SoAR",
-    "SOAR_PREFERENCES": "SoAR preferences",
-    "PREFERENCES_SAVE_CALLS": "Save video calls for debugging?",
     "ACTIONS": "Actions",
     "ADD": "Add",
     "ADD_CONTACT": "Add new contact",
@@ -44,6 +42,7 @@
     "PASSWORD_MISSING": "Your password is missing!",
     "PASSWORD_MISSING": "Your password is missing",
     "PASSWORD_NO_MATCH": "Passwords do not match!",
+    "PREFERENCES_SAVE_CALLS": "Save video calls for debugging?",
     "PROFILE": "Profile",
     "QUIT": "Exit the app",
     "QUIT_CALLING": "Quit calling",
@@ -57,8 +56,10 @@
     "RESET_PASSWORD_HEADER" :  "2 / 2 | Resetting your password",
     "RESET_PASSWORD_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the new password you want to use, twice",
     "SAR_CALL": "Call with SoAR",
+    "SAVING_CALL": "Saving call to device...",
     "SEARCH": "Search",
     "SETTINGS": "Settings",
+    "SOAR_PREFERENCES": "SoAR preferences",
     "SYNCING_CONTACTS": "Syncing your contacts...",
     "TIMEOUT_ERROR" :  "Connection timed out",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
