--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,7 +1,5 @@
 {
     "ABOUT": "Tietoja SoAR:sta",
-    "SOAR_PREFERENCES": "SoAR-asetukset",
-    "PREFERENCES_SAVE_CALLS": "Tallenna puhelut testausta varten?",
     "ACTIONS": "Toiminnot",
     "ADD": "Lisää",
     "ADD_CONTACT": "Lisää uusi kontakti",
@@ -44,6 +42,7 @@
     "PASSWORD_MISSING": "Salasana puuttuu!",
     "PASSWORD_MISSING": "Salasanasi puuttuu",
     "PASSWORD_NO_MATCH": "Salasanat eivät täsmää!",
+    "PREFERENCES_SAVE_CALLS": "Tallenna puhelut testausta varten?",
     "PROFILE": "Profiili",
     "QUIT": "Lopeta sovellus",
     "QUIT_CALLING": "Lopeta puhelu",
@@ -57,8 +56,10 @@
     "RESET_PASSWORD_HEADER" :  "2 / 2 | Salasanasi uusiminen",
     "RESET_PASSWORD_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös uusi salasana jota haluat käyttää kahteen kertaan.",
     "SAR_CALL": "Soita SoAR:lla",
+    "SAVING_CALL": "Tallennetaan puhelua...",
     "SEARCH": "Hae",
     "SETTINGS": "Asetukset",
+    "SOAR_PREFERENCES": "SoAR-asetukset",
     "SYNCING_CONTACTS": "Päivitetään kontakteja...",
     "TIMEOUT_ERROR" :  "Yhteyttä palvelimeen ei saatu",
     "UNSPECIFIED_ERROR" :  "Tuntematon virhe",
