Change call settings subsection header to something more specific

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -75,5 +75,6 @@
     "VERIFY_NUMBER_PASSWORD_TEXT" :  "Put in the number you used to register below in international format. You will get an SMS with a one-time code for resetting your password",
     "VERIFY_NUMBER_REGISTER_TEXT" :  "Sign up with your phone number. Enter the number in international format. You will get an SMS with a one-time code required for registration",
     "VERSION": "Current app version",
+    "RECORDING_PREFERENCES": "Recording preferences",
     "WRONG_PASSWORD": "Wrong password!"
 }
