Add functional call data deletion

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -1,9 +1,11 @@
 {
     "ABOUT": "Tietoja SoAR:sta",
+    "DELETE_CACHED_VIDEOS": "Delete saved calls",
     "ACTIONS": "Toiminnot",
+    "SUCCESS": "Toiminto onnistui",
+    "CALLDATA_DELETED": "Tallennetut puhelut poistettii",
     "ADD": "Lisää",
     "ADD_CONTACT": "Lisää uusi kontakti",
-    "RECORDING_PREFERENCES": "Nauhoitusasetukset",
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
@@ -49,6 +51,8 @@
     "QUIT_CALLING": "Lopeta puhelu",
     "RECONNECT_FAILED": "Yhteyden uudelleenmuodostaminen ei onnistunut. Ole hyvä ja yritä myöhemmin uudestaan.",
     "RECONNECT_STARTED": "Yhteys menetetty. Yritetään yhdistää...",
+    "RECORDING_FPS": "Nauhoituksen tallennusetäisyys (ms)",
+    "RECORDING_PREFERENCES": "Nauhoitusasetukset",
     "REFRESH_CONTACTS": "Päivitä kontaktilistasi",
     "REGISTER" :  "Rekisteröidy",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
