--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,7 +1,10 @@
 {
     "ABOUT": "About SoAR",
     "ACTIONS": "Actions",
+    "DELETE_CACHED_VIDEOS": "Delete saved calls",
     "ADD": "Add",
+    "SUCCESS": "Success",
+    "CALLDATA_DELETED": "Saved call data was deleted",
     "ADD_CONTACT": "Add new contact",
     "CALL_HEADER": "Call with {{displayName}}",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
@@ -48,6 +51,8 @@
     "QUIT_CALLING": "Quit calling",
     "RECONNECT_FAILED": "Reconnecting failed. Please wait and try again later",
     "RECONNECT_STARTED": "Lost connection. Attemping to reconnect...",
+    "RECORDING_FPS": "Recording interval (ms)",
+    "RECORDING_PREFERENCES": "Recording preferences",
     "REFRESH_CONTACTS": "Refresh your contacts list",
     "REGISTER" :  "Sign up",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
@@ -75,6 +80,5 @@
     "VERIFY_NUMBER_PASSWORD_TEXT" :  "Put in the number you used to register below in international format. You will get an SMS with a one-time code for resetting your password",
     "VERIFY_NUMBER_REGISTER_TEXT" :  "Sign up with your phone number. Enter the number in international format. You will get an SMS with a one-time code required for registration",
     "VERSION": "Current app version",
-    "RECORDING_PREFERENCES": "Recording preferences",
     "WRONG_PASSWORD": "Wrong password!"
 }
