Start upgrading layout

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,6 +1,7 @@
 {
     "ABOUT": "About SoAR",
     "ACTIONS": "Actions",
+    "CALL_LOG": "Call log",
     "DELETE_CACHED_VIDEOS": "Delete saved calls",
     "ADD": "Add",
     "SUCCESS": "Success",
