--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -3,6 +3,7 @@
     "DELETE_CACHED_VIDEOS": "Delete saved calls",
     "ACTIONS": "Toiminnot",
     "SUCCESS": "Toiminto onnistui",
+    "CALL_LOG": "Puheluhistoria",
     "CALLDATA_DELETED": "Tallennetut puhelut poistettii",
     "ADD": "Lisää",
     "ADD_CONTACT": "Lisää uusi kontakti",
