Style new button bar a bit more

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -6,7 +6,7 @@
     "ADD": "Add",
     "SUCCESS": "Success",
     "CALLDATA_DELETED": "Saved call data was deleted",
-    "ADD_CONTACT": "Add new contact",
+    "ADD_CONTACT": "Add contact",
     "CALL_HEADER": "Call with {{displayName}}",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
     "CALL_INCOMING_TITLE":" Call from {{displayName}}",
@@ -54,7 +54,7 @@
     "RECONNECT_STARTED": "Lost connection. Attemping to reconnect...",
     "RECORDING_FPS": "Recording interval (ms)",
     "RECORDING_PREFERENCES": "Recording preferences",
-    "REFRESH_CONTACTS": "Refresh your contacts list",
+    "REFRESH_CONTACTS": "Refresh list",
     "REGISTER" :  "Sign up",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Registering",
     "REGISTER_NUMBER_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the password you want to use, twice",
