--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -6,7 +6,7 @@
     "CALL_LOG": "Puheluhistoria",
     "CALLDATA_DELETED": "Tallennetut puhelut poistettii",
     "ADD": "Lisää",
-    "ADD_CONTACT": "Lisää uusi kontakti",
+    "ADD_CONTACT": "Lisää kontakti",
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
@@ -54,7 +54,7 @@
     "RECONNECT_STARTED": "Yhteys menetetty. Yritetään yhdistää...",
     "RECORDING_FPS": "Nauhoituksen tallennusetäisyys (ms)",
     "RECORDING_PREFERENCES": "Nauhoitusasetukset",
-    "REFRESH_CONTACTS": "Päivitä kontaktilistasi",
+    "REFRESH_CONTACTS": "Päivitä lista",
     "REGISTER" :  "Rekisteröidy",
     "REGISTER_NUMBER_HEADER" :  "2 / 2 | Rekisteröityminen ",
     "REGISTER_NUMBER_TEXT" :  "OK, sinun pitäisi saada koodisi hetken päästä. Sinulla on tunti aikaa käyttää koodi, joten kirjoita se alle, sekä myös salasana jota haluat käyttää kahteen kertaan.",
