--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -1,5 +1,6 @@
 {
     "ABOUT": "About SoAR",
+    "NUMBER_NOT_INTL": "The number '{{number}}' does not seem to be an international phone number!",
     "ACTIONS": "Actions",
     "CALL_LOG": "Call log",
     "DELETE_CACHED_VIDEOS": "Delete saved calls",
