More progress on user selection modal

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -67,7 +67,7 @@
     "RESET_PASSWORD" :  "Reset your password",
     "RESET_PASSWORD_HEADER" :  "2 / 2 | Resetting your password",
     "RESET_PASSWORD_TEXT" :  "OK, you should receive your code in a moment. You have an hour to use it, input your code and the new password you want to use, twice",
-    "SAR_CALL": "Call with SoAR",
+    "SAR_CALL": "Call",
     "SAVING_CALL": "Saving call to device...",
     "SEARCH": "Search",
     "SETTINGS": "Settings",
@@ -76,6 +76,7 @@
     "SYNCING_CONTACTS": "Syncing your contacts...",
     "TIMEOUT_ERROR" :  "Connection timed out",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
+    "USER_WITH_NAME" :  "Person {{displayName}}",
     "USER_ALREADY_IN_CALL": "User is already in call!",
     "USER_EXISTS": "The number you are attempting to register is already registered",
     "USER_NOT_FOUND": "User not found!",
