Finishing up new user modal

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -17,6 +17,7 @@
     "DELETE_CACHED_VIDEOS": "Delete saved calls",
     "DIAL_WAIT": "Dialing, please hold...",
     "DISPLAY_NAME": "Display name",
+    "EDIT": "Edit",
     "ERROR" :  "Error!",
     "ERROR_FETCH_CONTACTS": "Failed to fetch contacts",
     "ERROR_NETWORK" : "Network error with server!",
@@ -76,10 +77,10 @@
     "SYNCING_CONTACTS": "Syncing your contacts...",
     "TIMEOUT_ERROR" :  "Connection timed out",
     "UNSPECIFIED_ERROR" :  "Unspecified error",
-    "USER_WITH_NAME" :  "Person {{displayName}}",
     "USER_ALREADY_IN_CALL": "User is already in call!",
     "USER_EXISTS": "The number you are attempting to register is already registered",
     "USER_NOT_FOUND": "User not found!",
+    "USER_WITH_NAME" :  "Person {{displayName}}",
     "VERIFICATION_EXPIRED": "The code you used has expired. Please aqcuire a new one",
     "VERIFICATION_USED": "The code you used has alraedy been used once",
     "VERIFY_CODE": "Verification code",
