--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -3,6 +3,7 @@
     "ACTIONS": "Toiminnot",
     "ADD": "Lisää",
     "ADD_CONTACT": "Lisää kontakti",
+    "ADD_USER_NOT_FOUND": "Käyttäjä numerolla {{phoneNumber}} ei ole rekisteröitynt SoAR:n. Lisää silti?",
     "CALLDATA_DELETED": "Tallennetut puhelut poistettii",
     "CALL_HEADER": "Puhelu {{displayName}}:n kanssa",
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
@@ -24,7 +25,6 @@
     "ERROR_SERVER" : "Palvelimeen ei saatu yhteyttä!",
     "ERROR_TITLE" : "Jotain meni pieleen!",
     "ERROR_USER_OFFLINE": "Näyttää siltä että käyttäjä on offline!",
-    "ADD_USER_NOT_FOUND": "Käyttäjä numerolla {{phoneNumber}} ei ole rekisteröitynt SoAR:n. Lisää silti?",
     "FORCE_RECONNECT": "Kokeile uudelleen heti",
     "GIT_REPO": "GitHub-repositorio",
     "INFO": "Tietoja",
@@ -72,6 +72,7 @@
     "SAR_CALL": "Soita",
     "SAVING_CALL": "Tallennetaan puhelua...",
     "SEARCH": "Hae",
+    "SEEN": "Nähty: ",
     "SETTINGS": "Asetukset",
     "SOAR_PREFERENCES": "SoAR-asetukset",
     "SUCCESS": "Toiminto onnistui",
