Remove colon from seen span

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -72,7 +72,7 @@
     "SAR_CALL": "Call",
     "SAVING_CALL": "Saving call to device...",
     "SEARCH": "Search",
-    "SEEN": "Seen: ",
+    "SEEN": "Seen ",
     "SETTINGS": "Settings",
     "SOAR_PREFERENCES": "SoAR preferences",
     "SUCCESS": "Success",
