--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -72,7 +72,7 @@
     "SAR_CALL": "Soita",
     "SAVING_CALL": "Tallennetaan puhelua...",
     "SEARCH": "Hae",
-    "SEEN": "Nähty: ",
+    "SEEN": "Nähty ",
     "SETTINGS": "Asetukset",
     "SOAR_PREFERENCES": "SoAR-asetukset",
     "SUCCESS": "Toiminto onnistui",
