Add dynamic translations to call log

--- a/app/res/locales/en.json
+++ b/app/res/locales/en.json
@@ -6,9 +6,14 @@
     "ADD_USER_NOT_FOUND": "User with the number {{phoneNumber}} is not a registered SoAR user. Do you want to add it still?",
     "CALLDATA_DELETED": "Saved call data was deleted",
     "CALL_HEADER": "Call with {{displayName}}",
+    "CALL_LOG_YOU_CALLED": "You called them",
+    "CALL_LOG_THEY_CALLED": "They called you",
+    "CALL_LOG_THEY_NO_ANSWER": ", but they didn't answer",
+    "CALL_LOG_YOU_NO_ANSWER": ", but you didn't answer",
+    "CALL_LOG_ERROR": ", but something went wrong!",
     "CALL_INCOMING_TEMPLATE": "Incoming call. Answer?",
     "CALL_INCOMING_TITLE":" Call from {{displayName}}",
-    "CALL_LOG": "Call log",
+    "CALL_LOG": "Call Log",
     "CAMERA_NOT_FOUND" :  "No input device found!",
     "CANCEL": "Cancel",
     "CODE_MISSING": "Your verification code is missing!",
