--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -9,6 +9,11 @@
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
     "CALL_LOG": "Puheluhistoria",
+    "CALL_LOG_ERROR": ", mutta jotain meni pieleen!",
+    "CALL_LOG_THEY_CALLED": "He soittivat sinulle",
+    "CALL_LOG_THEY_NO_ANSWER": ", mutta he eivät vastanneet",
+    "CALL_LOG_YOU_CALLED": "Soitit heille",
+    "CALL_LOG_YOU_NO_ANSWER": ", mutta et vastannut",
     "CAMERA_NOT_FOUND" :  "Kameraa ei löytynyt!",
     "CANCEL": "Peruuta",
     "CODE_MISSING": "Varmistuslukusi puuttuu",
