Make finnish call translations less formal

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -10,9 +10,9 @@
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
     "CALL_LOG": "Puheluhistoria",
     "CALL_LOG_ERROR": ", mutta jotain meni pieleen!",
-    "CALL_LOG_THEY_CALLED": "He soittivat sinulle",
-    "CALL_LOG_THEY_NO_ANSWER": ", mutta he eivät vastanneet",
-    "CALL_LOG_YOU_CALLED": "Soitit heille",
+    "CALL_LOG_THEY_CALLED": "Hän soitti sinulle",
+    "CALL_LOG_THEY_NO_ANSWER": ", mutta hän ei vastannut",
+    "CALL_LOG_YOU_CALLED": "Soitit hänelle",
     "CALL_LOG_YOU_NO_ANSWER": ", mutta et vastannut",
     "CAMERA_NOT_FOUND" :  "Kameraa ei löytynyt!",
     "CANCEL": "Peruuta",
