--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -47,7 +47,7 @@
     "NAME_MISSING": "Kontakin nimi näyttää puuttuvan!",
     "NEXT_RECONNECT_IN": "Seuraava yritys {{countdown}} sekunnissa...",
     "NOTIFICATION_CALL" : "SoAR-puhelu {{displayName}}:lta ( {{mediaConnection}} )",
-    "NO_CALLS_MADE": "Looks like you haven't made any calls yet!",
+    "NO_CALLS_MADE": "Näyttää siltä, että et ole vielä tehnyt SoAR-puheluita!",
     "NO_CONTACTS_FOUND": "Näyttää siltä, että sinulla ei ole SoAR:n asentaneita kontakteja puhelimellasi",
     "NO_CONTACTS_SEARCH": "Ei vastaavia kontakteja",
     "NO_VERIFICATION": "Kyseistä koodia ei löytynyt",
