Show call duration in call log

--- a/app/res/locales/fi.json
+++ b/app/res/locales/fi.json
@@ -11,6 +11,7 @@
     "CALL_INCOMING_TEMPLATE": "Puhelu tulossa. Vastaa?",
     "CALL_INCOMING_TITLE":" Puhelu {{displayName}}:lta",
     "CALL_LOG": "Puheluhistoria",
+    "CALL_LOG_DURATION": "Puhelu kesti ",
     "CALL_LOG_ERROR": ", mutta jotain meni pieleen!",
     "CALL_LOG_FETCH_ERROR": "Puheluiden lataus meni pieleen!",
     "CALL_LOG_THEY_CALLED": "Hän soitti sinulle",
